<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:padding="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/cal"
            />

        <TextView
            android:id="@+id/textViewDisplay"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="20dp"
            android:background="#E2E2E2"
            android:gravity="bottom|end"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="42sp" />


        <GridLayout
            android:id="@+id/girdLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#211F1F"
            android:columnCount="4"
            android:visibility="gone"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/sin"
                android:textSize="22sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/cos"
                android:textSize="22sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/tan"
                android:textSize="22sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/log"
                android:textSize="22sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/pie"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/power"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="!"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp"
                tools:ignore="HardcodedText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onSpecialOperatorClick"
                android:text="@string/exponetional"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#211F1F"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/girdLayout"
            android:columnCount="4">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_7"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_8"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:backgroundTintMode="multiply"
                android:onClick="onDigitClick"
                android:text="@string/_9"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onOperatorClick"
                android:text="@string/division"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_4"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_5"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_6"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onOperatorClick"
                android:text="@string/multiply"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_1"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_2"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onDigitClick"
                android:text="@string/_3"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onOperatorClick"
                android:text="@string/addition"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="#181616"
                android:onClick="onClearClick"
                android:text="@string/c"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:backgroundTintMode="multiply"
                android:onClick="onDigitClick"
                android:text="@string/zero"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onEqualClick"
                android:text="@string/equal"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#181616"
                android:onClick="onOperatorClick"
                android:text="@string/subtraction"
                android:textSize="42sp"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="2dp" />

        </GridLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>